terraform/modules/aws/vpc/endpoints.tf
# Creamos el SG
resource "aws_security_group" "vpce" {
  name        = "${var.name_vpc}-vpce-sg"
  description = "SG for VPC Interface Endpoints"
  vpc_id      = aws_vpc.main.id
  ingress { from_port=443 to_port=443 protocol="tcp" cidr_blocks=[aws_vpc.main.cidr_block] }
  egress  { from_port=0   to_port=0   protocol="-1"  cidr_blocks=["0.0.0.0/0"] }
  tags = var.tags
}

# Gateway endpoints (privadas)
resource "aws_vpc_endpoint" "s3" {
  vpc_id            = aws_vpc.main.id
  service_name      = "com.amazonaws.${var.region}.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = aws_route_table.private[*].id
  tags = var.tags
}

resource "aws_vpc_endpoint" "dynamodb" {
  vpc_id            = aws_vpc.main.id
  service_name      = "com.amazonaws.${var.region}.dynamodb"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = aws_route_table.private[*].id
  tags = var.tags
}

# Interface endpoints (privadas)
locals {
  interface_services = {
    eks          = "com.amazonaws.${var.region}.eks"
    sts          = "com.amazonaws.${var.region}.sts"
    ssm          = "com.amazonaws.${var.region}.ssm"
    ssmmessages  = "com.amazonaws.${var.region}.ssmmessages"
    ec2messages  = "com.amazonaws.${var.region}.ec2messages"
  }
}

resource "aws_vpc_endpoint" "iface" {
  for_each            = local.interface_services
  vpc_id              = aws_vpc.main.id
  service_name        = each.value
  vpc_endpoint_type   = "Interface"
  private_dns_enabled = true
  subnet_ids          = aws_subnet.private[*].id
  security_group_ids  = [aws_security_group.vpce.id]
  tags = var.tags
}
